tests/baselines/reference/parserConstructorDeclaration3.errors.txt
parserConstructorDeclaration3.ts(2,3): error TS1031: 'export' modifier cannot appear on class elements of this kind.


==== parserConstructorDeclaration3.ts (1 errors) ====
    class C {
      export constructor() { }
      ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on class elements of this kind.
    }